# SwackQuote

./: .gitignore  README.md  admins.toml  bot.py  channel.txt  eggs.py  logs.py  out.txt  pyproject.toml  quote_deck.txt  quote_history.txt  quotes.py  quotes.toml  quotes.txt  requirements.txt
