[project]
name = "SwackQuote"
version = "1.3.0"
description = "A repository for the QOTD bot on the swack Discord server"
authors = ["Gnomeball", "AlexBlandin", "KrisRalph", "dedbepole"]
dependencies = ["py-cord>=2.4.1","tomli_w>=1.0.0","requests>=2.31.0"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
indent-width = 4
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["CPY", "G004", "TD003", "S311", "T201", "ANN401", "PLR2004", "W191", "E111", "E114", "E117", "E203", "D206", "D212", "D300", "Q000", "Q001", "Q002", "Q003", "COM812", "COM819", "ISC001", "ISC002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
lines_after_imports = 1
use_parentheses = true
comment_prefix = " #"
multi_line_output = 3
force_grid_wrap = 0
reverse_sort = true
length_sort = true
line_length = 120
from_first = true
